--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   http: ^0.13.0
   flutter_bloc: ^7.3.2
   equatable: ^2.0.3
+  formz: ^0.4.0
+  flutter_secure_storage: ^4.2.1
   uuid:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -48,8 +50,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-assets:
-  - assets/
+  assets:
+    - assets/images/welcome_background.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
